{
  "version": 4,
  "terraform_version": "0.12.31",
  "serial": 46,
  "lineage": "7b82efe8-d2e4-de4f-e2eb-61b51465578f",
  "resources": [
    {
      "module": "module.eks_setup",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:internet-gateway/igw-06d6683eadff16593",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-062b88549320b2ad4"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-062b88549320b2ad4"
                ]
              }
            ],
            "id": "igw-06d6683eadff16593",
            "internet_gateway_id": "igw-06d6683eadff16593",
            "owner_id": "896608052039",
            "tags": {
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "data",
      "type": "aws_security_group",
      "name": "eks_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:security-group/sg-057d192f497e9769f",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-057d192f497e9769f",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:vpc/vpc-062b88549320b2ad4",
            "cidr_block": "10.55.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0134e95c1a59df29b",
                "cidr_block": "10.55.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0efb443f4fd4239d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062b88549320b2ad4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c77d071365fcb28",
            "owner_id": "896608052039",
            "tags": {
              "Environment": "dev",
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:vpc/vpc-062b88549320b2ad4",
            "cidr_block": "10.55.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0134e95c1a59df29b",
                "cidr_block": "10.55.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0efb443f4fd4239d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "dev"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "dev"
                ]
              }
            ],
            "id": "vpc-062b88549320b2ad4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c77d071365fcb28",
            "owner_id": "896608052039",
            "tags": {
              "Environment": "dev",
              "Name": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e7e007fe54bf6ad",
            "association_id": "eipassoc-047e8c79d5cfbc29c",
            "domain": "vpc",
            "id": "eipalloc-09e7e007fe54bf6ad",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07f46437efefe8358",
            "private_dns": "ip-10-55-42-140.us-east-2.compute.internal",
            "private_ip": "10.55.42.140",
            "public_dns": "ec2-3-19-2-218.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.2.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_a"
            },
            "tags_all": {
              "Name": "nat_a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09681ce21e17d6eb9",
            "association_id": "eipassoc-0859b4a20aadaf8aa",
            "domain": "vpc",
            "id": "eipalloc-09681ce21e17d6eb9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0007052a94ed1ea5e",
            "private_dns": "ip-10-55-49-58.us-east-2.compute.internal",
            "private_ip": "10.55.49.58",
            "public_dns": "ec2-3-22-191-30.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.191.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_b"
            },
            "tags_all": {
              "Name": "nat_b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e7e007fe54bf6ad",
            "association_id": "eipassoc-047e8c79d5cfbc29c",
            "connectivity_type": "public",
            "id": "nat-0f9e636ee4df85a17",
            "network_interface_id": "eni-07f46437efefe8358",
            "private_ip": "10.55.42.140",
            "public_ip": "3.19.2.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fb069c0dd4b7328f",
            "tags": {
              "Name": "Nat_Gw_a"
            },
            "tags_all": {
              "Name": "Nat_Gw_a"
            }
          },
          "dependencies": [
            "module.eks_setup.aws_eip.nat_eip",
            "module.eks_setup.aws_subnet.eks_subnet-public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09681ce21e17d6eb9",
            "association_id": "eipassoc-0859b4a20aadaf8aa",
            "connectivity_type": "public",
            "id": "nat-086aa2868c57fa0d7",
            "network_interface_id": "eni-0007052a94ed1ea5e",
            "private_ip": "10.55.49.58",
            "public_ip": "3.22.191.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b3ab5b6b56f1f28",
            "tags": {
              "Name": "Nat_Gw_b"
            },
            "tags_all": {
              "Name": "Nat_Gw_b"
            }
          },
          "dependencies": [
            "module.eks_setup.aws_eip.nat_eip",
            "module.eks_setup.aws_subnet.eks_subnet-public"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cc4e9e944b9857111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f9e636ee4df85a17",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc4e9e944b985711",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_setup.aws_eip.nat_eip",
            "module.eks_setup.aws_nat_gateway.natgw",
            "module.eks_setup.aws_route_table.eks_route_table-private",
            "module.eks_setup.aws_subnet.eks_subnet-public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a49c39d219409c5c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086aa2868c57fa0d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a49c39d219409c5c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_setup.aws_eip.nat_eip",
            "module.eks_setup.aws_nat_gateway.natgw",
            "module.eks_setup.aws_route_table.eks_route_table-private",
            "module.eks_setup.aws_subnet.eks_subnet-public"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d6683eadff16593",
            "id": "r-rtb-0880ccdbca72484131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0880ccdbca7248413",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_setup.aws_route_table.eks_route_table-public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d6683eadff16593",
            "id": "r-rtb-0b39a3c60a2e7416a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b39a3c60a2e7416a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_setup.aws_route_table.eks_route_table-public"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_table-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:route-table/rtb-0cc4e9e944b985711",
            "id": "rtb-0cc4e9e944b985711",
            "owner_id": "896608052039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f9e636ee4df85a17",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_private_rt_a"
            },
            "tags_all": {
              "Name": "eks_private_rt_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:route-table/rtb-0a49c39d219409c5c",
            "id": "rtb-0a49c39d219409c5c",
            "owner_id": "896608052039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086aa2868c57fa0d7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_private_rt_b"
            },
            "tags_all": {
              "Name": "eks_private_rt_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_table-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:route-table/rtb-0880ccdbca7248413",
            "id": "rtb-0880ccdbca7248413",
            "owner_id": "896608052039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d6683eadff16593",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_public_rt_a"
            },
            "tags_all": {
              "Name": "eks_public_rt_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:route-table/rtb-0b39a3c60a2e7416a",
            "id": "rtb-0b39a3c60a2e7416a",
            "owner_id": "896608052039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d6683eadff16593",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_public_rt_b"
            },
            "tags_all": {
              "Name": "eks_public_rt_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtas",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a053908c924b652",
            "route_table_id": "rtb-0cc4e9e944b985711",
            "subnet_id": "subnet-0e2452f2376bc214d"
          },
          "dependencies": [
            "module.eks_setup.aws_route_table.eks_route_table-private",
            "module.eks_setup.aws_subnet.eks_subnet-private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cdd6653e198f548",
            "route_table_id": "rtb-0a49c39d219409c5c",
            "subnet_id": "subnet-0439a84c49df5ccbd"
          },
          "dependencies": [
            "module.eks_setup.aws_route_table.eks_route_table-private",
            "module.eks_setup.aws_subnet.eks_subnet-private"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtas",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b3029d252143f84",
            "route_table_id": "rtb-0880ccdbca7248413",
            "subnet_id": "subnet-0fb069c0dd4b7328f"
          },
          "dependencies": [
            "module.eks_setup.aws_route_table.eks_route_table-public",
            "module.eks_setup.aws_subnet.eks_subnet-public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc991b55335656e0",
            "route_table_id": "rtb-0b39a3c60a2e7416a",
            "subnet_id": "subnet-04b3ab5b6b56f1f28"
          },
          "dependencies": [
            "module.eks_setup.aws_route_table.eks_route_table-public",
            "module.eks_setup.aws_subnet.eks_subnet-public"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_to_cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:security-group/sg-0e8a3e3d2eecde7a0",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8a3e3d2eecde7a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7e0e491b3f48919"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev_node_to_cluster",
            "name_prefix": "",
            "owner_id": "896608052039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_node_to_cluster",
              "kubernetes.io/cluster/dev": "owned"
            },
            "tags_all": {
              "Name": "dev_node_to_cluster",
              "kubernetes.io/cluster/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_to_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:security-group/sg-0a7e0e491b3f48919",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7e0e491b3f48919",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8a3e3d2eecde7a0"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8a3e3d2eecde7a0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev_node_to_node",
            "name_prefix": "",
            "owner_id": "896608052039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_node_to_node",
              "kubernetes.io/cluster/dev": "owned"
            },
            "tags_all": {
              "Name": "dev_node_to_node",
              "kubernetes.io/cluster/dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_ingress_cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2611918206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7e0e491b3f48919",
            "security_group_rule_id": "sgr-05dd1314f3ef6ac10",
            "self": false,
            "source_security_group_id": "sg-0e8a3e3d2eecde7a0",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_setup.aws_security_group.eks_node_to_cluster",
            "module.eks_setup.aws_security_group.eks_node_to_node"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_ingress_node_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3156894331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e8a3e3d2eecde7a0",
            "security_group_rule_id": "sgr-08b78088d86494e28",
            "self": false,
            "source_security_group_id": "sg-0a7e0e491b3f48919",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_setup.aws_security_group.eks_node_to_cluster",
            "module.eks_setup.aws_security_group.eks_node_to_node"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_ingress_node_https1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 443,
            "id": "sgrule-2356326466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7e0e491b3f48919",
            "security_group_rule_id": "sgr-02d4475bb28172a99",
            "self": false,
            "source_security_group_id": "sg-0e8a3e3d2eecde7a0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_setup.aws_security_group.eks_node_to_cluster",
            "module.eks_setup.aws_security_group.eks_node_to_node"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_ingress_self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3285158278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a7e0e491b3f48919",
            "security_group_rule_id": "sgr-07bb0023c26ffc126",
            "self": false,
            "source_security_group_id": "sg-0a7e0e491b3f48919",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_setup.aws_security_group.eks_node_to_node"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_to_cluster_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3921331631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e8a3e3d2eecde7a0",
            "security_group_rule_id": "sgr-05e749a97a27080bc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks_setup.aws_security_group.eks_node_to_cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_to_node_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2829825366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a7e0e491b3f48919",
            "security_group_rule_id": "sgr-0cbff588f6fe1f6be",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks_setup.aws_security_group.eks_node_to_node"
          ]
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:subnet/subnet-0e2452f2376bc214d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.55.24.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2452f2376bc214d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "896608052039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_private_a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev_private_a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:subnet/subnet-0439a84c49df5ccbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.55.28.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0439a84c49df5ccbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "896608052039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_private_b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev_private_b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        }
      ]
    },
    {
      "module": "module.eks_setup",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:subnet/subnet-0fb069c0dd4b7328f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.55.40.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb069c0dd4b7328f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "896608052039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_public_a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev_public_a",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:896608052039:subnet/subnet-04b3ab5b6b56f1f28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.55.48.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b3ab5b6b56f1f28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "896608052039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_public_b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev_public_b",
              "kubernetes.io/cluster/dev": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062b88549320b2ad4"
          }
        }
      ]
    }
  ]
}